Create and Read the suculents

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>BIENEVNIDO</h1>
+<h1>BIENVENIDO</h1>
 <ul class="nav justify-content-end">
   <% if user_signed_in? %>
     <li class="nav-item">
