--- a/app/views/suculentas/show.html.erb
+++ b/app/views/suculentas/show.html.erb
@@ -1,4 +1,26 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_suculenta_path(@suculenta) %> |
-<%= link_to 'Back', suculentas_path %>
+<h2 class="text-center">Suculenta: <%= @suculenta.name %></h2>
+
+<div class="card bg-faded col-sm-6 offset-sm-3">
+  <div class="card-header">
+    <h4 class="text-center description"><strong>Atributos:</strong></h4>
+  </div>
+  <div class="card-body">
+    <ul class="list-group">
+      <li class="list-group-item"><b>Organo: </b><%= @suculenta.idOrgan %></li>
+      <li class="list-group-item"><b>Familia: </b><%= @suculenta.idFamily %></li>
+      <li class="list-group-item"><b>Sustrato: </b><%= @suculenta.idSustrato %></li>
+      <li class="list-group-item"><b>Temperatura: </b><%= @suculenta.temp %></li>
+    </ul>
+
+    <div class="suculenta-actions text-center">
+      <%= link_to "Edit suculenta", edit_suculenta_path(@suculenta), class: "btn btn-xs btn-primary" %>
+      <%= link_to "Delete this suculenta", suculenta_path(@suculenta),
+                  method: :delete,
+                  data: { confirm: "Are you sure you want to delete the suculenta?" },
+                  class: "btn btn-xs btn-danger" %>
+      <%= link_to "View all suculentas", suculentas_path, class: "btn btn-xs btn-success" %>
+    </div>
+  </div>
+</div>
