--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,46 @@
-<h1>BIENVENIDO</h1>
+
+<div class="jumbotron">
+  <h1 class="display-4">QUIERES CONOCER MAS SOBRE LAS SUCULENTAS </h1>
+  <img style="https://scontent.fbog2-2.fna.fbcdn.net/v/t1.0-9/37187898_283113335582601_6444026200565219328_o.png?_nc_cat=103&_nc_ht=scontent.fbog2-2.fna&oh=fbb05c8890a1459522b10fdbb2e0131c&oe=5CF074C0" class="img-rounded">
+  <p class="lead">En el continente americano tenemos la grandisima oportunidad de tener gran varidedad de especimenes de suculentas, en bolivia un grupo de aficionados quiere llevar a la vista del mundo las especies endemicas de bolivia entre otras</p>
+  <hr class="my-4">
+  <p>Cactumon nace como una idea independiente de un estudiante de bilogia con un gusto inmenso por las suculentas</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="https://www.facebook.com/Cactumon/" role="button">VISITAR</a>
+  </p>
+</div>
+<p> </p>
+<p> </p>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://scontent.fbog2-3.fna.fbcdn.net/v/t1.0-9/52130035_388245338402733_8394034815732547584_o.jpg?_nc_cat=104&_nc_ht=scontent.fbog2-3.fna&oh=5bb10486f54d8434caad4d22ad992cf8&oe=5CF2586A" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Derechos Reservados</h5>
+        <p>CACTUMON</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://scontent.fbog2-2.fna.fbcdn.net/v/t1.0-9/51375821_385072592053341_2185449956305797120_o.jpg?_nc_cat=103&_nc_ht=scontent.fbog2-2.fna&oh=3b91b4f185852fccbb6e0ee6129bc2c2&oe=5D1D673D" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Derechos Reservados</h5>
+        <p>CACTUMON</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://scontent.fbog2-1.fna.fbcdn.net/v/t1.0-9/49303406_378692436024690_6928520978527944704_o.jpg?_nc_cat=100&_nc_ht=scontent.fbog2-1.fna&oh=bb8581da1cdb39532176123409e71129&oe=5CE84555" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5 >Derechos Reservados</h5>
+        <p>CACTUMON</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
