--- a/app/views/suculentas/show.html.erb
+++ b/app/views/suculentas/show.html.erb
@@ -12,6 +12,7 @@
       <li class="list-group-item"><b>Familia: </b><%= @suculenta.idFamily %></li>
       <li class="list-group-item"><b>Sustrato: </b><%= @suculenta.idSustrato %></li>
       <li class="list-group-item"><b>Temperatura: </b><%= @suculenta.temp %></li>
+      <li class="list-group-item"><b>Temperatura: </b><div style="width:200px; heigth:200px"><%=image_tag(@suculenta.image, style:'width:100%') %></div></li>
     </ul>
 
     <div class="suculenta-actions text-center">
